added i18n-js gem for we can get i18n via js + updated design including media queries so the page is responsive + started on js to handle ui inputs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,28 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  hello: 'hey'
+  nono: 'No'
+  yesyes: 'Yes'
+  survey:
+    questions:
+      start_question:
+        question_1: 'Do you spend most of your free time by yourself?'
+        question_2: 'Do you hang out with your friends on a weekly basis?'
+      yes_to_1:
+        question_11: 'Do you watch a lot of TV or Netflix or Youtube?'
+      no_to_1:
+        question_10: 'start_questions.question_2'
+      yes_to_2:
+        question_21:  'fin_question'
+      no_to_2:
+        question_21:  'fin_question'
+      yes_to_11:
+        question_111: 'Are you interested in doing something else?'
+      no_to_11:
+        question_110: 'fin_question'
+      yes_to_111:
+        question_1111: 'fin_question'
+      no_to_111:
+        question_1110: 'fin_negative'
+      fin_question: 'Would you like to meet new friends that shares similar interests with you?'
+      fin_negative: 'Mezzoe is probably not for you. Still interested?'
+      sign_up: 'Enter your email address to get early access.'
