--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Hi there, this is a sample of my work, introducing a project that I was working on.
 
-Things you may want to cover:
+It uses:
 
-* Ruby version
+development: Rails, Psql, haml, sass, jquery
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+testing: rspec
